# rogue-pkg

./: GETTING_STARTED.md  LICENSE  MCP_REORGANIZATION_COMPLETE.md  QUICK_START.md  README.md  action.yml  package.json  roguepkg.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: roguepkg-all.yml  roguepkg-pr.yml  roguepkg-push.yml  roguepkg-scheduled.yml
mcp/: README.md  STRUCTURE.md  __init__.py  mcp_server.py  requirements.txt
mcp/config/: mcp_config.json  pyproject.toml
mcp/docs/: FILE_STRUCTURE.md  GET_STARTED.md  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  SUMMARY.md
mcp/examples/: test_mcp_tools.py  usage_examples.md
mcp/tools/: verify_setup.py
test_files/: README.md  package-lock.json  package.json
test_files/subproject/: package.json
