[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roguepkg-mcp"
version = "1.0.0"
description = "MCP Server for RoguePkg - Vulnerability and Malware Scanner for npm packages"
readme = "README_MCP.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "radioactivetobi"}
]
keywords = ["mcp", "security", "npm", "vulnerability", "malware", "osv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/radioactivetobi/roguepkg"
Repository = "https://github.com/radioactivetobi/roguepkg"
Issues = "https://github.com/radioactivetobi/roguepkg/issues"

[project.scripts]
roguepkg-mcp = "mcp_server:main"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

